# netflow-analysis

./: .env.example  .gitignore  .gitmodules  .prettierignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  datasets.json  datasets.json.example  package-lock.json  package.json  pyproject.toml  shell.nix  term-update-accomplishments-2025-12-15.md  term-update.md
.cursor/rules/: svelte.mdc
.github/workflows/: ci.yaml
.husky/: pre-commit
apps/landing/: astro.config.mjs  package.json  wrangler.jsonc
docs/: datasets-json.md  pipeline-usage.md  pipeline-v2.md  querying.md  setup.md  structure.md
netflow-db/: .env.example  common.py  db.py  depr_ip_db.py  discovery.py  extract_ml_window.py  flowStats.db  flow_db.py  ip_db.py  ip_time.py  maad_db.py  migrate_router_names.py  pipeline.py  prepare_nfcapd_dataset.py  protocol_db.py  pyproject.toml  restore_spectrum_from_backup.py  spectrum_db.py  structure_db.py  verify_ip_uniqueness.py
netflow-webapp/: .env.example  .prettierignore  README.md  eslint.config.js  package-lock.json  package.json  svelte.config.js
plans/: dashboard-data-loading-refactor.md  dataset-preparation-performance-plan.md  discovery-window-optimization-plan.md  file-detail-db-graphs-plan.md  multi-dataset-nfcapd-port-plan.md  netflow-pipeline-v2.md  reprocessing-window-plan.md  web-v2-database-compatibility.md
scripts/: build_maad_fast.sh  build_ugr16_netflow_v2.sh  download_ugr16_csv.sh  download_ugr16_nfcapd.sh  finalize_ugr16_netflow_v2.sh  migrate_processed_files.py  run-with-nix-if-available.sh  scrape_ugr16_download_urls.py
(+217 files in other folders)
